--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ click==7.1.2
 Flask==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
-MarkupSafe @ file:///opt/concourse/worker/volumes/live/fac44ebc-60de-4182-7f89-29bb8796c554/volume/markupsafe_1607027351541/work
-numpy @ file:///opt/concourse/worker/volumes/live/317d3633-3972-452c-494a-92900a1134d5/volume/numpy_and_numpy_base_1607448161283/work
+MarkupSafe=1.1.1
+numpy=1.19.2
 pandas==1.2.0
-plotly @ file:///tmp/build/80754af9/plotly_1607536586307/work
+plotly==4.14.1
 python-dateutil==2.8.1
-pytz @ file:///tmp/build/80754af9/pytz_1608922264688/work
+pytz==2020.5
 retrying==1.3.3
-six @ file:///opt/concourse/worker/volumes/live/34b5b2b5-c9cb-44fb-4b8e-8a9a881bfa35/volume/six_1605205329242/work
+six==1.15.0
 Werkzeug==1.0.1
