--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ click==7.1.2
 Flask==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
-MarkupSafe=1.1.1
+MarkupSafe==1.1.1
 numpy=1.19.2
 pandas==1.2.0
 plotly==4.14.1
