--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-numpy=1.19.2
+numpy==1.19.2
 pandas==1.2.0
 plotly==4.14.1
 python-dateutil==2.8.1
